<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <HorizontalScrollView
        android:id="@+id/ll_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_supp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/supp1"/>

            <TextView
                android:id="@+id/tv_supp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/supp2"/>

            <TextView
                android:id="@+id/tv_supp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/supp3"/>

            <TextView
                android:id="@+id/tv_supp4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/supp4"/>

            <TextView
                android:id="@+id/tv_supp5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/supp5"/>
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/ll_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_serviceName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#D8D8D8"
            android:textColor="#000"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/btn_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/regist"/>
    </LinearLayout>
</LinearLayout>